# task-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  tasks.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/repositories/: task_repository.py  user_repository.py
app/schemas/: task.py  user.py
app/services/: auth_service.py  task_service.py
docs/: architecture.md  task-api.postman_collection.json
prompts/: prompts-claude.md
tests/: conftest.py  test_auth.py  test_tasks.py
