[project]
name = "task-api"
version = "1.0.0"
description = "Micro-API RESTful para gestão de tarefas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "email-validator>=2.0",
    "python-multipart>=0.0.7",
    "slowapi>=0.1.9",
]

[project.scripts]
start = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::jwt.warnings.InsecureKeyLengthWarning"]
